docs-archive/apache-airflow-providers-edge3/3.0.0/_sources/_api/airflow/providers/edge3/cli/worker/index.rst.txt
airflow.providers.edge3.cli.worker
==================================

.. py:module:: airflow.providers.edge3.cli.worker


Attributes
----------

.. autoapisummary::

   airflow.providers.edge3.cli.worker.logger
   airflow.providers.edge3.cli.worker.base_log_folder
   airflow.providers.edge3.cli.worker.push_logs
   airflow.providers.edge3.cli.worker.push_log_chunk_size
   airflow.providers.edge3.cli.worker.setproctitle


Classes
-------

.. autoapisummary::

   airflow.providers.edge3.cli.worker.EdgeWorker


Module Contents
---------------

.. py:data:: logger

.. py:data:: base_log_folder

.. py:data:: push_logs
   :value: True


.. py:data:: push_log_chunk_size

.. py:data:: setproctitle

.. py:class:: EdgeWorker(pid_file_path, hostname, queues, concurrency, job_poll_interval, heartbeat_interval, daemon = False)

   Runner instance which executes the Edge Worker.


   .. py:attribute:: jobs
      :type:  list[airflow.providers.edge3.cli.dataclasses.Job]
      :value: []


      List of jobs that the worker is running currently.



   .. py:attribute:: drain
      :type:  bool
      :value: False


      Flag if job processing should be completed and no new jobs fetched for a graceful stop/shutdown.



   .. py:attribute:: maintenance_mode
      :type:  bool
      :value: False


      Flag if job processing should be completed and no new jobs fetched for maintenance mode. 



   .. py:attribute:: maintenance_comments
      :type:  str | None
      :value: None


      Comments for maintenance mode.



   .. py:attribute:: background_tasks
      :type:  set[asyncio.Task]


   .. py:attribute:: pid_file_path


   .. py:attribute:: job_poll_interval


   .. py:attribute:: hb_interval


   .. py:attribute:: hostname


   .. py:attribute:: queues


   .. py:attribute:: concurrency


   .. py:attribute:: daemon
      :value: False



   .. py:property:: free_concurrency
      :type: int


      Calculate the free concurrency of the worker.



   .. py:method:: signal_status()


   .. py:method:: signal_drain()


   .. py:method:: shutdown_handler()


   .. py:method:: start()
      :async:


      Start the execution in a loop until terminated.



   .. py:method:: loop()
      :async:


      Run a loop of scheduling and monitoring tasks.



   .. py:method:: fetch_and_run_job()
      :async:


      Fetch, start and monitor a new job.



   .. py:method:: heartbeat(new_maintenance_comments = None)
      :async:


      Report liveness state of worker to central site with stats.



   .. py:method:: interruptible_sleep()
      :async:


      Sleeps but stops sleeping if drain is made or some job completed.



